<resources>
    <string name="app_name">FindClass</string>
    <string name="cmpSenha">Senha:</string>
    <string name="cmpMatricula">Matricula:</string>
    <string name="btnEntrar">Entrar</string>
    <string name="txtRecSenha">Recuperar Senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="text_sala">Bloco A - Sala 1</string>
    <string name="txt_nome_sala">Bloco A - Sala 1</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txt_nome_sala_inf">Bloco D - Sala 15</string>
    <string name="btnDesmarcar">Cancelar Registro</string>
</resources>
