<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="unifor.com.br.findclass.views.TelaLoginActivity">

    <ImageView
        android:id="@+id/imgTelaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/teladelogin" />

    <EditText
        android:id="@+id/cmp_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/cmpMatricula"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/cmp_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cmp_matricula"
        android:layout_below="@+id/cmp_matricula"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/cmpSenha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmp_senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/btnEntrar" />

    <TextView
        android:id="@+id/txt_rec_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_entrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/txtRecSenha" />
</RelativeLayout>
