<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unifor.com.br.findclass.fragments.CadastroFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txt_nome_sala"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/txt_nome_sala"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/edt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Data"
        android:inputType="date"
        android:onClick="showDatePickerDialog"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="72dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/txt_nome_sala"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/adt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Hora"
        android:inputType="time"
        android:onClick="showTimePickerDialog"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="142dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/edt_data"
        android:layout_alignStart="@+id/edt_data" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adt_hora"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/txt_nome_sala"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/btnRegistrar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="219dp" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btn_registrar"
            android:background="@android:color/holo_red_light"
            android:text="@string/btnCancelar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="287dp" />

    </LinearLayout>

</RelativeLayout>

